[project]
name = "bro-exchange"
version = "1.0.4"
description = "This package contains tools for retrieving data from or sending data to the Dutch National Key Registry of the Subsurface (Basis Registratie Ondergrond)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "lxml>=6.1.1",
    "requests>=2.34.2",
]
license = "MIT"
license-files = ["LICENSE.MD"]
authors = [
    {name = "Karl Schutt", email = "karlschutt@outlook.com"},
    {name = "Steven Hosper", email = "steven.hosper@nelen-schuurmans.nl"},
]
maintainers = [
    {name = "Steven Hosper", email = "steven.hosper@nelen-schuurmans.nl"},
    {name = "Jelle Zitman", email = "jelle.zitman@nelen-schuurmans.nl"},
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.ruff]
# See https://docs.astral.sh/ruff/configuration/ for defaults.
target-version = "py311"

[tool.ruff.lint]
# Default select: ["E4", "E7", "E9", "F"]
select = ["E4", "E7", "E9", "F", "I", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["bro_exchange"]
